[package]
name = "city"
version = "0.1.0"
authors = ["caires <cairesvs@gmail.com>"]

[dependencies]
iron = "0.6.*"
router = "*"
serde = "*"
serde_json = "1.0"
slog = "2.3.2"
slog-async = "2.3.0"
slog-term = "2.4.0"
slog-json = "2.2.0"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"

[dependencies.logger]
git = "https://github.com/iron/logger.git"